build definition unit tests

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -8,6 +8,7 @@ parameters:
 			- 'Throwable'
 		uncheckedExceptionRegexes:
 			- '#^PHPUnit\\.*$#'
+			- '#^SebastianBergmann\\.*$#'
 		check:
 			missingCheckedExceptionInThrows: true
 			tooWideThrowType: true
